--- a/src/service/service.css
+++ b/src/service/service.css
@@ -6,7 +6,7 @@
 .servcol{
     flex-basis:30%;
 	border-radius: 10px;
-	margin-left :90px;
+	margin-left :55px;
 	position: relative;
 	overflow: hidden;
     background: transparent;
@@ -23,22 +23,23 @@
     font-family: 'Open Sans', sans-serif;
 }
 .facilimg{
-    margin-left :100px;
+    margin-left :50px;
 	position: relative;
 }
 .title h1{
   font-size: 65px;
   color: #12be00; 
   position: absolute;
-  transform: translate(130%,-180%);
+  transform: translate(110%,-180%);
   text-align: center;
 }
 
 .title p{
+    text-align: center;
     font-size: 16px;
     font-weight: 500;
     color:#12be00; 
     position: absolute;
-    transform: translate(122%,-50%);
+    transform: translate(160%,-50%);
     margin-right: 1050px;   
 }
